# RIDE

./: .appveyor.yml  .coveragerc  .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  .pylintrc  .travis.yml  AUTHORS.txt  BUILD.rest  CHANGELOG.adoc  CLAUDE.md  CONTRIBUTING.adoc  CONTRIBUTION.adoc  CONTRIBUTIONS.adoc  COPYRIGHT.txt  HACKING.txt  MANIFEST.in  README.adoc  README.md  README.rest  VERSION.txt  action.yml  coverage-diff.sh  coverage_diff.py  crowdin.yml  index.html  init_subrepo.sh  package.py  pavement.py  post_install.py  pyproject.toml  pytest.ini  release.sh  requirements-dev.txt  requirements.txt  requirements_win32.txt  rfgen.py  ride_postinstall.py  (+9 more)
.github/workflows/: build.yml  codeboarding.yml  codeboarding_generate.yml  fedora_41.yml  linux.yml  linux.yml_disabled  locale_troubleshoot.yml  package.yml  pylint.yml  sonar.yml  sonarcloud.yml
atest/: run_atests.py  test_golden.py  ui_acceptance.html
atest/golden/: another_resource.html  golden_resource.html  tests.html  tsvtests.tsv
atest/resources/: atest_resources.txt  editor.txt  file_menu.txt  history.txt  libraries.txt  opening_and_closing.txt  tree.txt
atest/robot/: __init__.txt  test_autoit.txt
doc/: epydoc.conf
doc/api/: api-objects.txt  class-tree.html  epydoc.conf  epydoc.css  generate.sh  help.html  identifier-index-A.html  identifier-index-B.html  identifier-index-C.html  identifier-index-D.html  identifier-index-E.html  identifier-index-F.html  identifier-index-G.html  identifier-index-H.html  identifier-index-I.html  identifier-index-J.html  identifier-index-K.html  identifier-index-L.html  identifier-index-M.html  identifier-index-N.html  identifier-index-O.html  identifier-index-P.html  identifier-index-Q.html  identifier-index-R.html  identifier-index-S.html  identifier-index-T.html  identifier-index-U.html  identifier-index-V.html  identifier-index-W.html  identifier-index-X.html  identifier-index-Z.html  identifier-index-_.html  identifier-index.html  index.html  module-tree.html  redirect.html  robotide-module.html  robotide-pysrc.html  robotide.action-module.html  robotide.action-pysrc.html  (+700 more)
doc/exampleplugins/: helloworld.py
doc/releasenotes/: ride-1.7.3.1.rst  ride-1.7.3.rst  ride-1.7.4.1.rst  ride-1.7.4.2.rst  ride-1.7.4.rst  ride-1.7.4b1.rst  ride-2.0.3.rst  ride-2.0.5.rst  ride-2.0.6.rst  ride-2.0.6dev2.rst  ride-2.0.7.rst  ride-2.0.8.1.rst  ride-2.0.8.rst  ride-2.0.rst  ride-2.0b1.rst  ride-2.0b2.rst  ride-2.0b3.rst  ride-2.0rc1.rst  ride-2.1.1.rst  ride-2.1.2.rst  ride-2.1.3.rst  ride-2.1.4.1.rst  ride-2.1.4.rst  ride-2.1.5.1.rst  ride-2.1.5.2.rst  ride-2.1.5.rst  ride-2.1.rst  ride-2.1a3.rst  ride-2.1b1.rst  ride-2.2.1.1.rst  ride-2.2.1.rst  ride-2.2.2.rst  ride-2.2.3.rst  ride-2.2.4.rst  (+2 more)
lib/: robot-changeset
proto/: create_icon.sh  menu.py  protoframe.py
rtest/: __init__.py  go_find_some_bugs.py  large_scale_keyword_test.py  model.py  simplifier.py  test_runner.py
src/: ez_setup.py
tools/: create_icon.sh  geni18n.py  mkhtml.py
trunk/: rundevel.py
utest/: datafilereader.py  run_utests.py  test_argumentparsing.py  test_robot_patches.py  time_tests.py
(+1116 files in other folders)
