[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "robotframework-ride"
dynamic = ["version", "readme"]

description = "RIDE :: Robot Framework Test Data Editor"
long_description = """
Robot Framework is a generic test automation framework for acceptance
level testing. RIDE is a lightweight and intuitive editor for Robot
Framework test data.

Project: https://github.com/robotframework/RIDE#readme
"""
long_description_content_type = "text/x-rst"
license = "Apache-2.0"
license-files = { paths = ["LICENSE.txt"] }
requires-python = ">=3.8, <3.15"
authors = [
    { name = "Robot Framework Developers", email = "robotframework@gmail.com" },
]
maintainers = [
  { name = "Hélio Guilherme", email = "helioxentric@gmail.com" },
]
keywords = [
    "robotframework",
    "testautomation",
    "testing",
    "test editor",
    "IDE",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "isbinary",
    "psutil",
    "Pygments",
    "PyPubSub",
    "Pywin32; platform_system == 'Windows'",
    "wxPython",
    "robotframework",
    "psutil",
    "packaging",
    "requests>=2.32.4",
]

[project.urls]
Download = "https://pypi.python.org/pypi/robotframework-ride"
Homepage = "https://github.com/robotframework/RIDE/"

[tool.uv]
# python-preference = "only-system"

[tool.hatch.version]
path = "src/robotide/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
[tool.hatch.build.targets.wheel]
packages = ["src/robotide"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
fragments = [
    {path = 'README.md'},
    {text = '## License'},
    {path = 'LICENSE.txt'},
]

[project.scripts]
ride_postinstall = "robotide.postinstall:main"
ride = "robotide:main"

[project.gui-scripts]
ride = "robotide:main"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "coverage",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.13"]
version = ["2.2"]

[tool.poetry]
name = "robotframework-ride"
version = "2.2"
description = "RIDE :: Robot Framework Test Data Editor"
authors = ["Robot Framework Developers <robotframework@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.adoc"
packages = [{include = "robotide"}]

[tool.poetry.dependencies]
python = "^3.8"
wxPython = "^4.1.1"
pywin32 = { version = "*", markers = "sys_platform == 'win32'" }
pygments = "*"
robotframework = "*"
pypubsub = "*"
psutil = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"
coverage = "*"

